@@ -5,6 +5,7 @@ import lombok.extern.log4j.Log4j2;
 import nova.mjs.comment.DTO.CommentResponseDto;
 import nova.mjs.comment.entity.Comment;
 import nova.mjs.comment.exception.CommentNotFoundException;
+import nova.mjs.comment.likes.repository.CommentLikeRepository;
 import nova.mjs.comment.repository.CommentRepository;
 import nova.mjs.community.entity.CommunityBoard;
 import nova.mjs.community.repository.CommunityBoardRepository;
@@ -16,6 +17,7 @@ import nova.mjs.community.exception.CommunityNotFoundException;
 import nova.mjs.member.exception.MemberNotFoundException;
 
 import java.util.List;
+import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
 @Service
@@ -28,17 +30,59 @@ public class CommentService {
     private final CommentRepository commentRepository;
     private final MemberRepository memberRepository;
     private final CommunityBoardRepository communityBoardRepository;
+    private final CommentLikeRepository commentLikeRepository;
 
 
 
     // 1. GEt 댓글 목록 (게시글 ID 기반, 페이지네이션 제거)
-    public List<CommentResponseDto.CommentSummaryDto> getCommentsByBoard(UUID communityBoardUuid) {
+    public List<CommentResponseDto.CommentSummaryDto> getCommentsByBoard(UUID communityBoardUuid, String email) {
+        // 1) 게시글 존재 여부 확인
         CommunityBoard board = getExistingBoard(communityBoardUuid);
+        // 2) 댓글 목록 조회
         List<Comment> comments = commentRepository.findByCommunityBoard(board);
+
+        // 댓글이 없다면 바로 빈 리스트 리턴
+        if (comments.isEmpty()) {
+            return List.of();
+        }
+
+        // 3) 비로그인 사용자면 -> isLiked = false로
+        if (email == null) {
+            return comments.stream()
+                    .map(c -> CommentResponseDto.CommentSummaryDto.fromEntity(c, false))
+                    .toList();
+        }
+
+        // 4) 로그인된 사용자 조회
+        Member member = memberRepository.findByEmail(email)
+                .orElse(null);
+        // 만약 email이 있는데 회원 정보가 없으면 -> isLiked = false
+        if (member == null) {
+            return comments.stream()
+                    .map(c -> CommentResponseDto.CommentSummaryDto.fromEntity(c, false))
+                    .toList();
+        }
+
+        // 5) 댓글 UUID 목록 추출
+        List<UUID> commentUuids = comments.stream()
+                .map(Comment::getUuid)
+                .toList();
+
+        // 6) 사용자가 좋아요한 댓글의 UUID들을 가져오기
+        List<UUID> likedUuids = commentLikeRepository.findCommentUuidsLikedByMember(member, commentUuids);
+
+        // 7) 조회된 UUID를 Set으로 변환(contains()용)
+        Set<UUID> likedSet = new java.util.HashSet<>(likedUuids);
+
+        // 8) 각 댓글마다 isLiked 여부 매핑
         return comments.stream()
-                .map(CommentResponseDto.CommentSummaryDto::fromEntity)
-                .collect(Collectors.toList());
+                .map(comment -> {
+                    boolean isLiked = likedSet.contains(comment.getUuid());
+                    return CommentResponseDto.CommentSummaryDto.fromEntity(comment, isLiked);
+                })
+                .toList();
     }
+
 
     // 2. POST 댓글 작성, 로그인 연동 추가
     @Transactional
@@ -48,11 +92,11 @@ public class CommentService {
                 .orElseThrow(MemberNotFoundException::new);
         CommunityBoard communityBoard = getExistingBoard(communityBoardUuid);
 
-        Comment comment = Comment.create(communityBoard, member,content);
+        Comment comment = Comment.create(communityBoard, member, content);
         Comment savedComment = commentRepository.save(comment);
 
         log.debug("댓글 작성 성공. UUID = {}, 작성자 : {}", savedComment.getUuid(), email);
-        return CommentResponseDto.CommentSummaryDto.fromEntity(savedComment);
+        return CommentResponseDto.CommentSummaryDto.fromEntity(savedComment, false);
     }
 
     // 3. DELETE 댓글 삭제, 로그인 연동 추가
